[tool.poetry]
name = "python-templates"
version = "0.1.0"
description = ""
authors = ["Justin Beredo <justindberedo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^23.2.1"
aiohttp = "^3.8.6"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
